--- a/DeepLearning_withTemporalSplits.ipynb
+++ b/DeepLearning_withTemporalSplits.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sensor Based Activity Recoginition \n",
+    "Challenge: cdl1 - Sensor based Activity Recognition  \n",
+    "Team: Lea Bütler, Manjavy Kirupa, Etienne Roulet, Si Ben Tran  \n",
+    "\n",
+    "Aufgabe: DL Modell erstellen\n",
+    "\n",
+    "Hier in diesem Notebook erstellen wir unsere Deep Learning Modelle."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -42,8 +56,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Daten einlesen"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +74,7 @@
     "@dataclass\n",
     "class Parameters():\n",
     "    batch_size: int = 128\n",
-    "    epochs: int = 2\n",
+    "    epochs: int = 5\n",
     "    verbosity: str = \"auto\"\n",
     "    step_size: int = 374\n",
     "    number_folds: int = 2\n",
@@ -61,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -110,18 +132,102 @@
        "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>2023-02-27 15:02:17.156</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000</td>\n",
        "      <td>9.722</td>\n",
        "      <td>1.278</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>-0.21775</td>\n",
        "      <td>-0.719579</td>\n",
        "      <td>0.631111</td>\n",
+       "      <td>01_SamsungA22-2023-02-27_15-02-03</td>\n",
+       "      <td>Ben_Tran</td>\n",
+       "      <td>Laufen</td>\n",
+       "      <td>01_SamsungA22-2023-02-27_15-02-03Ben_TranLaufen</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2023-02-27 15:02:31.574</td>\n",
+       "      <td>-0.728</td>\n",
+       "      <td>9.779</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.42065</td>\n",
+       "      <td>0.568356</td>\n",
+       "      <td>-0.598058</td>\n",
+       "      <td>01_SamsungA22-2023-02-27_15-02-03</td>\n",
+       "      <td>Ben_Tran</td>\n",
+       "      <td>Laufen</td>\n",
+       "      <td>01_SamsungA22-2023-02-27_15-02-03Ben_TranLaufen</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2023-02-27 15:02:16.685</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>43.5</td>\n",
+       "      <td>-13.143750</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>01_SamsungA22-2023-02-27_15-02-03</td>\n",
+       "      <td>Ben_Tran</td>\n",
+       "      <td>Laufen</td>\n",
+       "      <td>01_SamsungA22-2023-02-27_15-02-03Ben_TranLaufen</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2023-02-27 15:02:32.295</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-13.012501</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>20.587502</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>01_SamsungA22-2023-02-27_15-02-03</td>\n",
+       "      <td>Ben_Tran</td>\n",
+       "      <td>Laufen</td>\n",
+       "      <td>01_SamsungA22-2023-02-27_15-02-03Ben_TranLaufen</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2023-02-27 15:02:33.285</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-22.612501</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>20.268751</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>01_SamsungA22-2023-02-27_15-02-03</td>\n",
        "      <td>Ben_Tran</td>\n",
        "      <td>Laufen</td>\n",
@@ -133,47 +239,108 @@
       ],
       "text/plain": [
        "   Unnamed: 0                     time  Accelerometer_x  Accelerometer_y  \\\n",
-       "0           1  2023-02-27 15:02:17.156              0.0            9.722   \n",
+       "0           1  2023-02-27 15:02:17.156            0.000            9.722   \n",
+       "1           2  2023-02-27 15:02:31.574           -0.728            9.779   \n",
+       "2           3  2023-02-27 15:02:16.685            0.000            0.000   \n",
+       "3           4  2023-02-27 15:02:32.295            0.000            0.000   \n",
+       "4           5  2023-02-27 15:02:33.285            0.000            0.000   \n",
        "\n",
        "   Accelerometer_z  Gyroscope_x  Gyroscope_y  Gyroscope_z  Magnetometer_x  \\\n",
-       "0            1.278          0.0          0.0          0.0             0.0   \n",
+       "0            1.278          0.0          0.0          0.0        0.000000   \n",
+       "1            0.000          0.0          0.0          0.0        0.000000   \n",
+       "2            0.000          0.0          0.0          0.0        0.000000   \n",
+       "3            0.000          0.0          0.0          0.0      -13.012501   \n",
+       "4            0.000          0.0          0.0          0.0      -22.612501   \n",
        "\n",
        "   Magnetometer_y  Magnetometer_z  Orientation_qx  Orientation_qy  \\\n",
-       "0             0.0             0.0        -0.21775       -0.719579   \n",
+       "0             0.0        0.000000        -0.21775       -0.719579   \n",
+       "1             0.0        0.000000        -0.42065        0.568356   \n",
+       "2            43.5      -13.143750         0.00000        0.000000   \n",
+       "3             0.0       20.587502         0.00000        0.000000   \n",
+       "4             0.0       20.268751         0.00000        0.000000   \n",
        "\n",
        "   Orientation_qz                                 id      user   class  \\\n",
        "0        0.631111  01_SamsungA22-2023-02-27_15-02-03  Ben_Tran  Laufen   \n",
+       "1       -0.598058  01_SamsungA22-2023-02-27_15-02-03  Ben_Tran  Laufen   \n",
+       "2        0.000000  01_SamsungA22-2023-02-27_15-02-03  Ben_Tran  Laufen   \n",
+       "3        0.000000  01_SamsungA22-2023-02-27_15-02-03  Ben_Tran  Laufen   \n",
+       "4        0.000000  01_SamsungA22-2023-02-27_15-02-03  Ben_Tran  Laufen   \n",
        "\n",
        "                                       id_combined  \n",
-       "0  01_SamsungA22-2023-02-27_15-02-03Ben_TranLaufen  "
+       "0  01_SamsungA22-2023-02-27_15-02-03Ben_TranLaufen  \n",
+       "1  01_SamsungA22-2023-02-27_15-02-03Ben_TranLaufen  \n",
+       "2  01_SamsungA22-2023-02-27_15-02-03Ben_TranLaufen  \n",
+       "3  01_SamsungA22-2023-02-27_15-02-03Ben_TranLaufen  \n",
+       "4  01_SamsungA22-2023-02-27_15-02-03Ben_TranLaufen  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"Alle_Messungen_trimmed.csv\") \n",
-    "df.head(1)"
+    "df = pd.read_csv(\"../Sensor_Data-Wrangling-und-EDA/Alle_Messungen_trimmed.csv\") \n",
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2344488, 18)\n"
+     ]
+    }
+   ],
    "source": [
     "# convert the string time column to datetime\n",
     "epoch = pd.Timestamp('1970-01-01')\n",
     "\n",
     "df['time'] = pd.to_datetime(df['time'])\n",
-    "df['time'] = (df['time'] - epoch).apply(lambda x: int(x.total_seconds() * 1000))"
+    "df['time'] = (df['time'] - epoch).apply(lambda x: int(x.total_seconds() * 1000))\n",
+    "\n",
+    "print(df.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4063, 18)\n",
+      "(2340425, 18)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# select etiennes laufen dataset 01\n",
+    "df_etienne = df[df[\"id_combined\"] == \"01_iPhone13pro-2023-03-21_16-55-47Etienne_RouletLaufen\"]\n",
+    "# split df_etienne into 2 parts \n",
+    "df_etienne_laufen = df_etienne.sample(frac=0.6, random_state=42)\n",
+    "print(df_etienne_laufen.shape)\n",
+    "\n",
+    "# export to csv\n",
+    "df_etienne_laufen.to_csv(\"Etienne_Messung_Laufen.csv\", index=False)\n",
+    "\n",
+    "# remove rows from df that are in df_etienne_laufen\n",
+    "df = df.drop(df_etienne_laufen.index)\n",
+    "\n",
+    "# print new shape of df\n",
+    "print(df.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,28 +385,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((2497481, 12),\n",
-       " (2497481,),\n",
-       " (19977, 300, 12),\n",
-       " (19977, 6),\n",
-       " (4995, 300, 12),\n",
-       " (4995, 6))"
+       "((2340425, 12),\n",
+       " (2340425,),\n",
+       " (18721, 300, 12),\n",
+       " (18721, 6),\n",
+       " (4681, 300, 12),\n",
+       " (4681, 6))"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,23 +479,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/2\n",
-      "53/53 [==============================] - 99s 2s/step - loss: 1.2256 - accuracy: 0.5544 - precision: 0.7795 - recall: 0.2575 - val_loss: 0.9379 - val_accuracy: 0.6914 - val_precision: 0.8556 - val_recall: 0.4609\n",
-      "Epoch 2/2\n",
-      "53/53 [==============================] - 102s 2s/step - loss: 0.7577 - accuracy: 0.7488 - precision: 0.8810 - recall: 0.6023 - val_loss: 0.6811 - val_accuracy: 0.7650 - val_precision: 0.8490 - val_recall: 0.6381\n",
-      "209/209 [==============================] - 14s 68ms/step - loss: 0.6811 - accuracy: 0.7650 - precision: 0.8490 - recall: 0.6381\n",
-      "Epoch 1/2\n",
-      "105/105 [==============================] - 180s 2s/step - loss: 1.0152 - accuracy: 0.6407 - precision_1: 0.8546 - recall_1: 0.4015 - val_loss: 0.6623 - val_accuracy: 0.7791 - val_precision_1: 0.8731 - val_recall_1: 0.6746\n",
-      "Epoch 2/2\n",
-      "105/105 [==============================] - 174s 2s/step - loss: 0.5458 - accuracy: 0.8231 - precision_1: 0.8922 - recall_1: 0.7364 - val_loss: 0.4230 - val_accuracy: 0.8730 - val_precision_1: 0.9122 - val_recall_1: 0.8290\n",
-      "209/209 [==============================] - 12s 55ms/step - loss: 0.4230 - accuracy: 0.8730 - precision_1: 0.9122 - recall_1: 0.8290\n"
+      "Epoch 1/5\n",
+      "33/49 [===================>..........] - ETA: 58s - loss: 1.3183 - accuracy: 0.4912 - precision: 0.7807 - recall: 0.2090 "
      ]
     }
    ],
@@ -445,25 +597,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_yvo = pd.read_csv(\"Yvo_Messung_Velo.csv\")\n",
-    "df_yvo = df_yvo.drop(columns=[\"id\", \"user\", \"id_combined\"])\n",
+    "df_etienne = pd.read_csv(\"Eitenne_Messungen_Laufen.csv\")\n",
+    "df_etienne = df_etienne.drop(columns=[\"id\", \"user\", \"id_combined\"])\n",
     "# convert the string time column to datetime\n",
     "epoch = pd.Timestamp('1970-01-01')\n",
-    "df_yvo['time'] = pd.to_datetime(df_yvo['time'])\n",
-    "df_yvo['time'] = (df_yvo['time'] - epoch).apply(lambda x: int(x.total_seconds() * 1000))\n",
-    "df_yvo.drop(['Unnamed: 0'], axis=1, inplace=True)\n",
+    "df_etienne['time'] = pd.to_datetime(df_etienne['time'])\n",
+    "df_etienne['time'] = (df_etienne['time'] - epoch).apply(lambda x: int(x.total_seconds() * 1000))\n",
+    "df_etienne.drop(['Unnamed: 0'], axis=1, inplace=True)\n",
     "# get all types of the df\n",
     "le = LabelEncoder()\n",
-    "df_yvo[\"class\"] = le.fit_transform(df_yvo[\"class\"])"
+    "df_etienne[\"class\"] = le.fit_transform(df_etienne[\"class\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +652,7 @@
     "step_size = 100\n",
     "\n",
     "# Reshape X to 2D format (samples, features)\n",
-    "X = df_yvo.values[:, 1:13]\n",
+    "X = df_etienne.values[:, 1:13]\n",
     "\n",
     "# Create a sliding window of X with the specified window and step sizes\n",
     "X_windows = np.array([X[i:i+window_size,:] for i in range(0,X.shape[0]-window_size+1,step_size)])\n",
@@ -561,7 +713,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
