--- a/DL-Modelle-First-Experiment.ipynb
+++ b/DL-Modelle-First-Experiment.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -179,20 +179,20 @@
        "0  01_SamsungA22-2023-02-27_15-02-03Ben_TranLaufen  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# read the CSV file into a DataFrame\n",
-    "df = pd.read_csv(\"Alle_Messungen_trimmed.csv\") \n",
+    "df = pd.read_csv(\"../Sensor_Data-Wrangling-und-EDA/Alle_Messungen_trimmed.csv\") \n",
     "df.head(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,9 +245,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.00000000e+00,  9.72200012e+00,  1.27800000e+00, ...,\n",
+       "        -2.17749998e-01, -7.19578981e-01,  6.31111026e-01],\n",
+       "       [-7.27999985e-01,  9.77900028e+00,  0.00000000e+00, ...,\n",
+       "        -4.20650005e-01,  5.68355978e-01, -5.98057985e-01],\n",
+       "       [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00, ...,\n",
+       "         0.00000000e+00,  0.00000000e+00,  0.00000000e+00],\n",
+       "       ...,\n",
+       "       [ 9.94240170e-01,  3.07503464e+00, -7.40944039e-01, ...,\n",
+       "         9.59244333e-01, -4.56052347e-03,  2.82537639e-01],\n",
+       "       [ 4.23653867e-01,  2.43334855e+00, -4.32823262e-01, ...,\n",
+       "         9.59244933e-01, -5.84288178e-03,  2.82514528e-01],\n",
+       "       [ 1.17072136e-01,  1.64349815e+00, -1.32931384e-01, ...,\n",
+       "         9.59104863e-01, -7.07405861e-03,  2.82961185e-01]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from sklearn.model_selection import TimeSeriesSplit\n",
     "\n",
@@ -257,6 +279,9 @@
     "\n",
     "# Reshape X to 2D format (samples, features)\n",
     "X = df.values[:, 1:13]\n",
+    "\n",
+    "# display X\n",
+    "display(X)\n",
     "\n",
     "# Define y\n",
     "y = df[\"class\"].values\n",
@@ -826,7 +851,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
