create val data

--- a/DL-Modelle.ipynb
+++ b/DL-Modelle.ipynb
@@ -16,14 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[PhysicalDevice(name='/physical_device:CPU:0', device_type='CPU'), PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n"
+      "[PhysicalDevice(name='/physical_device:CPU:0', device_type='CPU')]\n"
      ]
     }
    ],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -244,29 +244,29 @@
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0                     time  Accelerometer_x  Accelerometer_y   \n",
-       "0           1  2023-02-27 15:02:17.156            0.000            9.722  \\\n",
+       "   Unnamed: 0                     time  Accelerometer_x  Accelerometer_y  \\\n",
+       "0           1  2023-02-27 15:02:17.156            0.000            9.722   \n",
        "1           2  2023-02-27 15:02:31.574           -0.728            9.779   \n",
        "2           3  2023-02-27 15:02:16.685            0.000            0.000   \n",
        "3           4  2023-02-27 15:02:32.295            0.000            0.000   \n",
        "4           5  2023-02-27 15:02:33.285            0.000            0.000   \n",
        "\n",
-       "   Accelerometer_z  Gyroscope_x  Gyroscope_y  Gyroscope_z  Magnetometer_x   \n",
-       "0            1.278          0.0          0.0          0.0        0.000000  \\\n",
+       "   Accelerometer_z  Gyroscope_x  Gyroscope_y  Gyroscope_z  Magnetometer_x  \\\n",
+       "0            1.278          0.0          0.0          0.0        0.000000   \n",
        "1            0.000          0.0          0.0          0.0        0.000000   \n",
        "2            0.000          0.0          0.0          0.0        0.000000   \n",
        "3            0.000          0.0          0.0          0.0      -13.012501   \n",
        "4            0.000          0.0          0.0          0.0      -22.612501   \n",
        "\n",
-       "   Magnetometer_y  Magnetometer_z  Orientation_qx  Orientation_qy   \n",
-       "0             0.0        0.000000        -0.21775       -0.719579  \\\n",
+       "   Magnetometer_y  Magnetometer_z  Orientation_qx  Orientation_qy  \\\n",
+       "0             0.0        0.000000        -0.21775       -0.719579   \n",
        "1             0.0        0.000000        -0.42065        0.568356   \n",
        "2            43.5      -13.143750         0.00000        0.000000   \n",
        "3             0.0       20.587502         0.00000        0.000000   \n",
        "4             0.0       20.268751         0.00000        0.000000   \n",
        "\n",
-       "   Orientation_qz                                 id      user   class   \n",
-       "0        0.631111  01_SamsungA22-2023-02-27_15-02-03  Ben_Tran  Laufen  \\\n",
+       "   Orientation_qz                                 id      user   class  \\\n",
+       "0        0.631111  01_SamsungA22-2023-02-27_15-02-03  Ben_Tran  Laufen   \n",
        "1       -0.598058  01_SamsungA22-2023-02-27_15-02-03  Ben_Tran  Laufen   \n",
        "2        0.000000  01_SamsungA22-2023-02-27_15-02-03  Ben_Tran  Laufen   \n",
        "3        0.000000  01_SamsungA22-2023-02-27_15-02-03  Ben_Tran  Laufen   \n",
@@ -280,7 +280,7 @@
        "4  01_SamsungA22-2023-02-27_15-02-03Ben_TranLaufen  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -326,40 +326,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Etiennes Laufen entfernen"
+    "## Create Validation Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(4063, 18)\n",
-      "(2340425, 18)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# select etiennes laufen dataset 01\n",
-    "df_etienne = df[\n",
-    "    df[\"id_combined\"] == \"01_iPhone13pro-2023-03-21_16-55-47Etienne_RouletLaufen\"\n",
-    "]\n",
-    "# split df_etienne into 2 parts\n",
-    "df_etienne_laufen = df_etienne.sample(frac=0.6, random_state=42)\n",
-    "print(df_etienne_laufen.shape)\n",
+    "# select three random id_combines files\n",
+    "ids = [\"06_iPhone12-2023-03-16_13-46-58Manjavy_KirupaVelofahren\", \"01_iPhone13pro-2023-03-21_16-55-47Etienne_RouletLaufen\", \"01_iPhone13ProMax-2023-03-15_18-29-42Gabriel_TorresRennen\"]\n",
+    "df_validation = df[df[\"id_combined\"].isin(ids)]\n",
     "\n",
-    "# export to csv\n",
-    "df_etienne_laufen.to_csv(\"Etienne_Messung_Laufen.csv\", index=False)\n",
+    "# export to csv \n",
+    "df_validation.to_csv(\"validation-velo-laufen-rennen.csv\", index=False)\n",
     "\n",
-    "# remove rows from df that are in df_etienne_laufen\n",
-    "df = df.drop(df_etienne_laufen.index)\n",
-    "\n",
-    "# print new shape of df\n",
-    "print(df.shape)"
+    "# remove the validation data from the dataframe \n",
+    "df = df[~df[\"id_combined\"].isin(ids)]"
    ]
   },
   {
@@ -372,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1435,7 +1419,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Test auf Etiennes Laufen Datenset"
+    "## Validation Daten Predicten"
    ]
   },
   {
@@ -1444,25 +1428,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_etienne = pd.read_csv(\"Etienne_Messung_Laufen.csv\")\n",
-    "df_etienne = df_etienne.drop(columns=[\"id\", \"user\", \"id_combined\"])\n",
+    "df_val = pd.read_csv(\"validation_data.csv\")\n",
+    "df_val = df_val.drop(columns=[\"id\", \"user\", \"id_combined\"])\n",
     "# convert the string time column to datetime\n",
     "epoch = pd.Timestamp(\"1970-01-01\")\n",
-    "df_etienne[\"time\"] = pd.to_datetime(df_etienne[\"time\"])\n",
-    "df_etienne[\"time\"] = (df_etienne[\"time\"] - epoch).apply(\n",
+    "df_val[\"time\"] = pd.to_datetime(df_val[\"time\"])\n",
+    "df_val[\"time\"] = (df_val[\"time\"] - epoch).apply(\n",
     "    lambda x: int(x.total_seconds() * 1000)\n",
     ")\n",
-    "df_etienne.drop([\"Unnamed: 0\"], axis=1, inplace=True)\n",
+    "df_val.drop([\"Unnamed: 0\"], axis=1, inplace=True)\n",
     "# get all types of the df\n",
     "le = LabelEncoder()\n",
-    "df_etienne[\"class\"] = le.fit_transform(df_etienne[\"class\"])\n",
+    "df_val[\"class\"] = le.fit_transform(df_val[\"class\"])\n",
     "\n",
     "# Set the window size and step size\n",
     "window_size = 300\n",
     "step_size = 100\n",
     "\n",
     "# Reshape X to 2D format (samples, features)\n",
-    "X = df_etienne.values[:, 1:13]\n",
+    "X = df_val.values[:, 1:13]\n",
     "\n",
     "# Create a sliding window of X with the specified window and step sizes\n",
     "X_windows = np.array(\n",
@@ -1522,6 +1506,84 @@
     "weights_as_list = [w.tolist() for w in weights]\n",
     "with open(\"weights.json\", \"w\") as f:\n",
     "    json.dump(weights_as_list, f)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Modell Einlesen und predicten"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8/8 [==============================] - 5s 140ms/step\n",
+      "Class 0 count: 41\n",
+      "Class 1 count: 0\n",
+      "Class 2 count: 1\n",
+      "Class 3 count: 1\n",
+      "Class 4 count: 28\n",
+      "Class 5 count: 171\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Model laden\n",
+    "model = tf.keras.models.load_model(\"saved_model/sensor_model.h5\")\n",
+    "\n",
+    "df_val = pd.read_csv(\"validation_data.csv\")\n",
+    "df_val = df_val.drop(columns=[\"id\", \"user\", \"id_combined\"])\n",
+    "# convert the string time column to datetime\n",
+    "epoch = pd.Timestamp(\"1970-01-01\")\n",
+    "df_val[\"time\"] = pd.to_datetime(df_val[\"time\"])\n",
+    "df_val[\"time\"] = (df_val[\"time\"] - epoch).apply(\n",
+    "    lambda x: int(x.total_seconds() * 1000)\n",
+    ")\n",
+    "df_val.drop([\"Unnamed: 0\"], axis=1, inplace=True)\n",
+    "# get all types of the df\n",
+    "le = LabelEncoder()\n",
+    "df_val[\"class\"] = le.fit_transform(df_val[\"class\"])\n",
+    "\n",
+    "# Set the window size and step size\n",
+    "window_size = 300\n",
+    "step_size = 100\n",
+    "\n",
+    "# Reshape X to 2D format (samples, features)\n",
+    "X = df_val.values[:, 1:13]\n",
+    "\n",
+    "# Create a sliding window of X with the specified window and step sizes\n",
+    "X_windows = np.array(\n",
+    "    [\n",
+    "        X[i : i + window_size, :]\n",
+    "        for i in range(0, X.shape[0] - window_size + 1, step_size)\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "# Reshape X_windows to 3D format (samples, timesteps, features)\n",
+    "timesteps = X_windows.shape[1]\n",
+    "n_features = X_windows.shape[2]\n",
+    "X_windows = X_windows.reshape(-1, timesteps, n_features)\n",
+    "\n",
+    "y_pred_probs = model.predict(X_windows)\n",
+    "\n",
+    "# Get the predicted class labels for each input window\n",
+    "y_pred_labels = np.argmax(y_pred_probs, axis=1)\n",
+    "\n",
+    "# Print the predicted class labels\n",
+    "# get the median of the predicted labels\n",
+    "sol = np.median(y_pred_labels)\n",
+    "\n",
+    "class_counts = np.bincount(y_pred_labels)\n",
+    "for i, count in enumerate(class_counts):\n",
+    "    print(f\"Class {i} count: {count}\")"
    ]
   }
  ],
