--- a/DL-Modelle.ipynb
+++ b/DL-Modelle.ipynb
@@ -87,7 +87,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Daten einlesen"
+    "# Daten einlesen\n",
+    "\n",
+    "- Einlesen der **Getrimmten Daten**"
    ]
   },
   {
@@ -481,7 +483,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Preprocessing Data"
+    "# Preprocessing Data\n",
+    "\n",
+    "- Beim Preprocessing entfernen von drei zufällige Sensor Messungen aus unserem Datensatz  \n",
+    "- Validierungsdatensatz daraus erstellen, der verwendet wird, um das Modell zu validieren\n",
+    "- Nicht relevante Spalten löschen\n",
+    "- Funktion für *augment_data* erstellen, um Daten zu erweitern\n",
+    "- Transformation der Daten in passende Window Size mit Step Size für das DL-Modell\n"
    ]
   },
   {
@@ -693,7 +701,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DL-Modelle erstellen"
+    "# DL-Modelle erstellen\n",
+    "\n",
+    "- DL Modelle mit Tensorflow Framework erstellt \n",
+    "\n",
+    "Tabellarische Auflistung aller DL-Modelle und deren Parameter\n",
+    "\n",
+    "| DL-Modell | Anzahl CNN Layer | CNN Filter Size | Kernel Size | Aktivierungsfunktion | L2-Regularisierung | Dropout | Anzahl LSTM Layer | LSTM Neuronen | Anzahl Dense Layer | Dense Neuronen | \n",
+    "| --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- |\n",
+    "| 01 | 1 | 64 | 2 | relu | 0.01 | - | 1 | 100 | 1 | 6 | \n",
+    "| 02 | 1 | 64 | 4 | relu | 0.01 | 0.2 | 1 | 100 | 1 | 6 |  \n",
+    "| 03 | 1 | 32 | 2 | relu | 0.01 | - | 1 | 100 | 1 | 6 | \n",
+    "| 04 | 1 | 64 | 2 | relu | 0.01 | - | 1 | 100 | 1 | 6 | \n",
+    "| 05 | 3 | (32,20,10) | 2 | relu | 0.01 | - | - | - | 3 | (180,100,6) | \n",
+    "| 06 | 2 | (64,32) | 2 | relu | 0.01 | - | - | - | 4 | (200,100,50,6) | \n",
+    "| 07 | 5 | (64,64,64,64,64) | 2 | relu | 0.05 | - | - | - | 6 | (200,150,100,50,25,6)"
    ]
   },
   {
@@ -837,7 +859,7 @@
     "# Fifth Deep Learning Model - CNN - MLP\n",
     "def create_model_5(name=\"model_5\"):\n",
     "    '''\n",
-    "    CNN Model with 3 Conv1D Layers and 2 Dense Layers with Batch Normalization and L2 Regularization\n",
+    "    CNN Model with 3 Conv1D Layers and 3 Dense Layers with Batch Normalization and L2 Regularization\n",
     "    '''\n",
     "    model = tf.keras.Sequential(\n",
     "        [\n",
@@ -911,7 +933,7 @@
     "                   unitsdense3 = 50, \n",
     "                   l2_reg = 0.01):\n",
     "    '''\n",
-    "    CNN Model with 2 Conv1D Layers and 3 Dense Layers with Batch Normalization and L2 Regularization\n",
+    "    CNN Model with 2 Conv1D Layers and 4 Dense Layers with Batch Normalization and L2 Regularization\n",
     "    '''\n",
     "    model = tf.keras.Sequential(\n",
     "        [\n",
@@ -982,7 +1004,7 @@
     "                   l2_reg = 0.05):\n",
     "    '''\n",
     "    Check, if the deeper the model the better the results? \n",
-    "    CNN Model with 5 Conv1D Layers and 5 Dense Layers with Batch Normalization and L2 Regularization\n",
+    "    CNN Model with 5 Conv1D Layers and 6 Dense Layers with Batch Normalization and L2 Regularization\n",
     "    '''\n",
     "    model = tf.keras.Sequential(\n",
     "        [\n",
@@ -1479,15 +1501,6 @@
     "print((median, median2, median3))\n",
     "\n",
     "print(dict(zip(le.classes_, le.transform(le.classes_))))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# the Conclusion is that the model is not overfitted but Gabriel is more a Stepper than a Runner ;)"
    ]
   }
  ],
