--- a/DL-Modelle.ipynb
+++ b/DL-Modelle.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -501,20 +501,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# select three random id_combines files\n",
     "ids = [\"06_iPhone12-2023-03-16_13-46-58Manjavy_KirupaVelofahren\", \n",
     "       \"01_iPhone13pro-2023-03-21_16-55-47Etienne_RouletLaufen\", \n",
-    "       \"01_iPhone13ProMax-2023-03-15_18-29-42Gabriel_TorresRennen\"]\n",
+    "       \"01_iPhone13ProMax-2023-03-15_18-29-42Gabriel_TorresRennen\",\n",
+    "       \"04_SamsungA22-2023-02-27_17-53-45Ben_TranSitzen\",\n",
+    "       \"03_Huawei_Stehen-2023-03-16_15-27-54Lea_BuetlerStehen\",\n",
+    "       \"01_iPhone14Pro_2023-02-28_20-09-53Yvo_KellerTreppenlaufen\"]\n",
     "\n",
     "# create a dataframe with these three random files\n",
     "df_validation = df[df[\"id_combined\"].isin(ids)]\n",
     "\n",
     "# export the dataframe as a csv file\n",
-    "df_validation.to_csv(\"data/validation-velo-laufen-rennen.csv\", index=False)\n",
+    "df_validation.to_csv(\"data/validation-data.csv\", index=False)\n",
     "\n",
     "# remove the validation data from the dataframe \n",
     "df = df[~df[\"id_combined\"].isin(ids)]"
@@ -530,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1116,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1242,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1296,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1365,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1398,44 +1401,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "18/18 [==============================] - 0s 27ms/step\n",
+      "18/18 [==============================] - 0s 14ms/step\n",
       "Class 0 count: 0\n",
       "Class 1 count: 0\n",
       "Class 2 count: 0\n",
       "Class 3 count: 0\n",
       "Class 4 count: 0\n",
       "Class 5 count: 547\n",
-      "78/78 [==============================] - 1s 7ms/step\n",
-      "Class 0 count: 14\n",
-      "Class 1 count: 2314\n",
-      "Class 2 count: 0\n",
-      "Class 3 count: 52\n",
-      "Class 4 count: 86\n",
-      "20/20 [==============================] - 0s 8ms/step\n",
+      "20/20 [==============================] - 0s 3ms/step\n",
       "Class 0 count: 567\n",
       "Class 1 count: 0\n",
       "Class 2 count: 0\n",
       "Class 3 count: 5\n",
       "Class 4 count: 55\n",
       "Class 5 count: 11\n",
-      "((5.0, 'velo'), (1.0, 'rennen'), (0.0, 'laufen'))\n",
-      "{'Laufen': 0, 'Rennen': 1, 'Sitzen': 2, 'Stehen': 3, 'Treppenlaufen': 4, 'Velofahren': 5}\n"
+      "78/78 [==============================] - 0s 3ms/step\n",
+      "Class 0 count: 14\n",
+      "Class 1 count: 2314\n",
+      "Class 2 count: 0\n",
+      "Class 3 count: 52\n",
+      "Class 4 count: 86\n",
+      "2/2 [==============================] - 0s 3ms/step\n",
+      "Class 0 count: 0\n",
+      "Class 1 count: 4\n",
+      "Class 2 count: 0\n",
+      "Class 3 count: 34\n",
+      "14/14 [==============================] - 0s 3ms/step\n",
+      "Class 0 count: 12\n",
+      "Class 1 count: 0\n",
+      "Class 2 count: 2\n",
+      "Class 3 count: 35\n",
+      "Class 4 count: 324\n",
+      "Class 5 count: 48\n",
+      "((5.0, 'velo'), (0.0, 'laufen'), (1.0, 'rennen'), (3.0, 'stehen'), (4.0, 'Treppenlaufen'))\n"
      ]
     }
    ],
    "source": [
     "# create class for validation data of unseen data\n",
+    "# import label encoder as le\n",
     "class validate_unseen_data():\n",
     "    def __init__(self, model_path=\"saved_model/sensor_model.h5\"):\n",
     "        self.model = tf.keras.models.load_model(model_path)\n",
-    "        self.csv_path = \"data/validation-velo-laufen-rennen.csv\"\n",
+    "        self.csv_path = \"data/validation-data.csv\"\n",
     "        \n",
     "    \n",
     "    def predict_classes(self, file=\"06_iPhone12-2023-03-16_13-46-58Manjavy_KirupaVelofahren\", expected=''):\n",
@@ -1452,13 +1467,19 @@
     "        # get all types of the df\n",
     "        le = LabelEncoder()\n",
     "        df_val[\"class\"] = le.fit_transform(df_val[\"class\"])\n",
-    "\n",
+    "    \n",
     "        # Set the window size and step size\n",
     "        window_size = 400\n",
     "        step_size = 10\n",
     "\n",
     "        # Reshape X to 2D format (samples, features)\n",
     "        X = df_val.values[:, 1:13]\n",
+    "        # X to textfile\n",
+    "\n",
+    "        # print X in a loop and in a valid Python Array Format and comma seperated array values\n",
+    "        \n",
+    "        \n",
+    "        # write textfile with the X data in the following format [X1\n",
     "\n",
     "        # Create a sliding window of X with the specified window and step sizes\n",
     "        X_windows = np.array(\n",
@@ -1473,7 +1494,7 @@
     "        n_features = X_windows.shape[2]\n",
     "        X_windows = X_windows.reshape(-1, timesteps, n_features)\n",
     "\n",
-    "        y_pred_probs = model.predict(X_windows)\n",
+    "        y_pred_probs = self.model.predict(X_windows)\n",
     "\n",
     "        # Get the predicted class labels for each input window\n",
     "        y_pred_labels = np.argmax(y_pred_probs, axis=1)\n",
@@ -1488,13 +1509,18 @@
     "        \n",
     "        return (sol, expected)\n",
     "\n",
-    "median = validate_unseen_data().predict_classes('06_iPhone12-2023-03-16_13-46-58Manjavy_KirupaVelofahren', expected='velo')\n",
-    "median2 = validate_unseen_data().predict_classes('01_iPhone13ProMax-2023-03-15_18-29-42Gabriel_TorresRennen', expected='rennen')\n",
-    "median3 = validate_unseen_data().predict_classes('01_iPhone13pro-2023-03-21_16-55-47Etienne_RouletLaufen', expected='laufen')\n",
+    "median1 = validate_unseen_data().predict_classes('06_iPhone12-2023-03-16_13-46-58Manjavy_KirupaVelofahren', expected='velo')\n",
+    "median2 = validate_unseen_data().predict_classes('01_iPhone13pro-2023-03-21_16-55-47Etienne_RouletLaufen', expected='laufen')\n",
+    "#median3 = validate_unseen_data().predict_classes('04_SamsungA22-2023-02-27_17-53-45Ben_TranSitzen', expected='sitzen')\n",
+    "median4 = validate_unseen_data().predict_classes('01_iPhone13ProMax-2023-03-15_18-29-42Gabriel_TorresRennen', expected='rennen')\n",
     "\n",
-    "print((median, median2, median3))\n",
+    "median5 = validate_unseen_data().predict_classes(\"03_Huawei_Stehen-2023-03-16_15-27-54Lea_BuetlerStehen\", expected='stehen')\n",
     "\n",
-    "print(dict(zip(le.classes_, le.transform(le.classes_))))"
+    "median6 = validate_unseen_data().predict_classes(\"01_iPhone14Pro_2023-02-28_20-09-53Yvo_KellerTreppenlaufen\", expected='Treppenlaufen')\n",
+    "\n",
+    "\n",
+    "\n",
+    "print((median1, median2, median4, median5, median6))\n"
    ]
   }
  ],
@@ -1514,7 +1540,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4
  },
